Add documentation to testimonials
