# swagger/api/v1/docs/swagger.yaml
@@ -333,6 +333,100 @@ paths:
                   type: text
               required:
               - name
+               "/api/v1/testimonials":
+    get:
+      summary: Get All Testimonials
+      tags:
+      - Testimonials
+      security:
+      - Bearer: {}
+      parameters:
+      - name: Authorization
+        in: header
+        schema:
+          type: string
+      responses:
+        '200':
+          description: successful
+    post:
+      summary: Create Testimonials
+      tags:
+      - Testimonials
+      security:
+      - Bearer: {}
+      parameters:
+      - name: Authorization
+        in: header
+        schema:
+          type: string
+      responses:
+        '201':
+          description: created
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                content:
+                  type: string
+                  nullable: true
+              required:
+              - name
+  "/api/v1/testimonials/{id}":
+    patch:
+      summary: Update Testimonial
+      tags:
+      - Testimonials
+      security:
+      - Bearer: {}
+      parameters:
+      - name: Authorization
+        in: header
+        schema:
+          type: string
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: updated successfully
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                content:
+                  type: string
+                  nullable: true
+              required:
+              - name
+    delete:
+      summary: Delete Testimonial
+      tags:
+      - Testimonials
+      security:
+      - Bearer: {}
+      parameters:
+      - name: Authorization
+        in: header
+        schema:
+          type: string
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: deleted successfully
 servers:
 - url: http://{defaultHost}
   variables:
